<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">社保查询</string>
   	<string name="title_guide">社保指南</string>
	<string name="back">返回</string>
	<string name="question">社保常见问题</string>
	<string name="guide">在线办事指南</string>
	<string name="medical">定点医疗机构</string>
	<string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="notify">提醒</string>
    <string name="exitmessage">您确定要退出社保吗？</string>
    <string name="notice">政策公告</string>
    <string name="query">业务查询</string>
    <string name="setting">设置</string>
    <string name="account">社保账号</string>
    <string name="account_note">请输入社保账号</string>
    <string name="query_type">请选择查询种类</string>
    <string name="query_submit">查询</string>
    <string name="query_clear">清空</string>
    <string name="progress">正在获取数据请稍候&#8230;</string>
    <string name="get_message_error">获取信息失败，请稍后再试</string>
    <!-- query -->
    <string name="query_info">个人参保信息查询</string>
    <string name="query_medical">医保消费明细查询</string>
    <string name="query_shebao">社保缴费明细查询</string>
    <string name="setting_login">用户登录</string>
    <string name="setting_update">软件更新</string>
    <string name="setting_help">帮助</string>
    <string name="setting_about">关于</string>
    <string name="setting_version">1.0</string>
    
    <string name="username">用户名称:</string>
    <string name="userid">身份证号:</string>
    <string name="login_btn">登录</string>
    <string name="clean_btn">清空</string>
</resources>