<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEF2FF" 
    android:orientation="vertical" >
       <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/top_bar"
         android:orientation="horizontal">
          <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/query"
            android:textColor="#fff"
            android:textSize="20sp"
			android:gravity="center_horizontal"
			android:layout_gravity="center"
            />
      </LinearLayout>
      
      <LinearLayout 
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content" 
       		android:orientation="vertical"
       		android:layout_marginTop="15dp"
       		android:layout_marginLeft="20dp"
       		android:layout_marginRight="20dp">
    	<TextView
       	    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/account" />
     	 <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:id="@+id/setting_host_pwd"
            >
    		<EditText
    			android:id="@+id/account_input"
       	    	android:layout_width="fill_parent"
            	android:layout_height="45dp"
            	android:textSize="18sp"
            	android:hint="@string/account_note"
            	android:paddingLeft="10dp"
            />
        </RelativeLayout>  
         
    	<TextView
       	    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:text="@string/query_type" />
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            >
    		
    		<Spinner android:id="@+id/query_type_spinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
    		/>
        </RelativeLayout>
        
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
           <Button 
	            android:id="@+id/query_submit_btn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/btn_query_selector"
	            android:text="@string/query_submit"
	            android:textSize="18sp"
	            android:textColor="#FDF6F2"
	           />
           <Button 
                android:id="@+id/query_clear_btn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/btn_query_selector"
	            android:text="@string/query_clear"
	            android:textSize="18sp"
	            android:layout_alignParentRight="true"
	            android:textColor="#FDF6F2"
	           />
         </RelativeLayout>
      </LinearLayout>   
       
    
</LinearLayout>