<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEF2FF" 
    android:orientation="vertical" >
    
       <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/top_bar"
         android:orientation="horizontal">
          <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="#fff"
            android:textSize="20sp"
			android:gravity="center_horizontal"
			android:layout_gravity="center"
            />
      </LinearLayout>
       
        <LinearLayout 
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content" 
       		android:orientation="vertical"
       		android:layout_marginTop="25dp"
        	android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
       		>
            <TextView
                android:id="@+id/setting_login" 
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/setting_login"
                android:textColor="#000000"
                android:drawablePadding="20dp"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_list"
                android:paddingRight="20dp"
                android:drawableRight="@drawable/list_bg_arrow"
             />
               <RelativeLayout 
           	 		android:layout_width="fill_parent"
            		android:layout_height="45dp"
            		android:orientation="horizontal"
       				android:background="@drawable/setting_list_no_top_border"
       			> 
            	<TextView
	                android:id="@+id/setting_update" 
	                android:layout_width="wrap_content"
	                android:layout_height="45dp"
	                android:text="@string/setting_update"
	                android:textColor="#000000"
	                android:drawablePadding="20dp"
	                android:textSize="18sp"
	                android:paddingLeft="20dp"
	                android:gravity="center_vertical"
             		/>
            	<TextView
	                android:layout_width="wrap_content"
	                android:layout_height="45dp"
	                android:text="@string/setting_version"
	                android:textColor="#000000"
	                android:textSize="18sp"
	                android:layout_alignParentRight="true"
            		android:layout_centerVertical="true"
            		android:layout_marginRight="20dp"
            		android:gravity="center_vertical"
             		/>
            	</RelativeLayout>
            </LinearLayout>
            
         <LinearLayout 
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content" 
       		android:orientation="vertical"
       		 android:layout_marginTop="25dp"
        	android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
       		>
            <TextView
                android:id="@+id/setting_help" 
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/setting_help"
                android:textColor="#000000"
                android:drawablePadding="20dp"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_list"
                android:paddingRight="20dp"
                android:drawableRight="@drawable/list_bg_arrow"
             />
            <TextView
                android:id="@+id/setting_about" 
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/setting_about"
                android:textColor="#000000"
                android:drawablePadding="20dp"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_list_no_top_border"
                android:paddingRight="20dp"
                android:drawableRight="@drawable/list_bg_arrow"
             />
            </LinearLayout>
</LinearLayout>