<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEF2FF" 
    android:orientation="vertical" >
    
       <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/top_bar"
         android:orientation="horizontal">
          <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_guide"
            android:textColor="#fff"
            android:textSize="20sp"
			android:gravity="center_horizontal"
			android:layout_gravity="center"
            />
      </LinearLayout>
      
      <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gallery_guide"
        >
	       <com.gnet.shebao.common.DetialGallery 
	    		android:id="@+id/gallery"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:fadingEdge="none"
	        />
	       <com.gnet.shebao.common.PageIndicatorView
       			android:id="@+id/pageView"
       			android:layout_width="fill_parent"
       			android:layout_below= "@+id/gallery"
       			android:layout_height="10dp"
   				/>

    </RelativeLayout>
    <LinearLayout 
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" 
        	android:orientation="vertical"
        	android:paddingTop="10dp">
		      <Button 
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:id="@+id/question_btn"
			       android:background="@drawable/btn_entermine_selector"
				   android:layout_gravity="center"
				   android:textSize="18sp"
				   android:text="@string/question"
			       />
		        <Button
		            android:id="@+id/guide_btn"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="10dp"
		            android:background="@drawable/btn_entermine_selector" 
				    android:layout_gravity="center"
				    android:textSize="18sp"
				    android:text="@string/guide"
		            />
		        <Button
		            android:id="@+id/medical_query_btn"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="10dp"
		            android:background="@drawable/btn_entermine_selector" 
				   	android:layout_gravity="center"
				    android:textSize="18sp"
				    android:text="@string/medical"
		            />
        </LinearLayout>
         		   
</LinearLayout>