<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEF2FF"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar"
        android:orientation="horizontal">
         <ImageView
            android:contentDescription="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_back_selector"
            android:layout_gravity="center_vertical"
            android:id="@+id/back_btn"
            />
         <TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/setting_login"
            	android:textColor="#fff"
            	android:textSize="20sp"
                android:layout_gravity="center_vertical"
                />
     </LinearLayout>
    
    <LinearLayout 
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content" 
       		android:orientation="vertical"
       		android:layout_marginTop="15dp"
       		android:layout_marginLeft="20dp"
       		android:layout_marginRight="20dp">
        
      <LinearLayout 
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
       		android:orientation="horizontal"
       		>
    	<TextView
       	    android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/username" 
            android:gravity="center"/>
    	
         	<!-- 刚进入页面时，让EditText不获取焦点 -->
    		<View 
    			android:layout_width="1dp" 
    			android:layout_height="45dp"  
         	    android:focusable="true" 
        	    android:focusableInTouchMode="true" />
    		<EditText
    			android:id="@+id/username_text"
       	    	android:layout_width="fill_parent"
            	android:layout_height="45dp"
            	android:textColor="#5B5F5B"
            	android:textSize="18sp"
            	android:hint=""
            	android:paddingLeft="10dp"
                android:background="@drawable/bg_edittext_selector"
            />
        </LinearLayout>
        
         <LinearLayout 
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
       		android:orientation="horizontal"
       		android:layout_marginTop="20dp"
       		>
       	<TextView
       	    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/userid" />
         	<!-- 刚进入页面时，让EditText不获取焦点 -->
    		<View 
    			android:layout_width="1dp" 
    			android:layout_height="45dp"  
         	    android:focusable="true" 
        	    android:focusableInTouchMode="true" />
    		<EditText
    			android:id="@+id/userid_text"
       	    	android:layout_width="fill_parent"
            	android:layout_height="45dp"
            	android:textColor="#5B5F5B"
            	android:textSize="18sp"
            	android:hint=""
            	android:paddingLeft="10dp"
                android:background="@drawable/bg_edittext_selector"
            />
        </LinearLayout>
         
       <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
    		
           <Button 
                android:id="@+id/login_btn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/btn_login_selector"
	            android:text="@string/login_btn"
	            android:textSize="18sp"
	            android:textColor="#FDF6F2"
	           />
           <View 
    			android:id="@+id/login_space"
    			android:layout_width="20dp" 
    			android:layout_height="45dp"
    			android:layout_toRightOf="@+id/login_btn"
    			 />
           <Button 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:id="@+id/clean_btn"
	            android:background="@drawable/btn_clean_selector"
	            android:text="@string/clean_btn"
	            android:textSize="18sp"
	            android:textColor="#FDF6F2"
	            android:layout_alignParentRight="true"
	            android:layout_toRightOf="@+id/login_space"
	           />  
         </RelativeLayout>
     </LinearLayout>

</LinearLayout>